--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Adewale Stephen</a>.
   </div>
+  <script src="main.js"></script>
 </body>
 </html>
