--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,47 +8,81 @@
   <title>Frontend Mentor | Room homepage</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  Home
-  Shop
-  About
-  Contact
+  <main>h4
+    <section>
+      <nav>
+        <img src="./assets/images/icon-hamburger.svg" alt="icon hamburger">
+        <img src="./assets/images/logo.svg" alt="logo">
+        <ul>
+          <li>Home</li>
+          <li>Shop</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+      <div>
+        <img src="./assets/images/icon-angle-right.svg" alt="angle right">
+        <img src="./assets/images/icon-angle-left.svg" alt="angle left">
+      </div>
+    </section>
+    <header>
+      <section>
+        <h1>Discover innovative ways to decorate</h1>
+        <p>
+          We provide unmatched quality, comfort, and style for property owners across the country.
+          Our experts combine form and function in bringing your vision to life. Create a room in your
+          own style with our collection and make your property a reflection of you and what you love.
+        </p>
+        <div>
+          <h3>Shop now</h3> <img src="./assets/images/icon-arrow.svg" alt="icon arrow">
+        </div>
+      </section>
+      <section>
+        <h1>We are available all across the globe</h1>
+        <p>
+          With stores all over the world, it's easy for you to find furniture for your home or place of business.
+          Locally, we’re in most major cities throughout the country. Find the branch nearest you using our
+          store locator. Any questions? Don't hesitate to contact us today.
+        </p>
+        <div>
+          <h3>Shop now</h3> <img src="./assets/images/icon-arrow.svg" alt="icon arrow">
+        </div>
+      </section>
+      <section>
+        <h1>Manufactured with the best materials</h1>
+        <p>
+          Our modern furniture store provide a high level of quality. Our company has invested in advanced technology
+          to ensure that every product is made as perfect and as consistent as possible. With three decades of
+          experience in this industry, we understand what customers want for their home and office.
+        </p>
+        <div>
+          <h3>Shop now</h3> <img src="./assets/images/icon-arrow.svg" alt="icon arrow">
+        </div>
+      </section>
+    </header>
+  </main>
+  <section>
+    <div></div>
+    <div>
+      <h3>About our furniture</h3>
+      <p>
+        Our multifunctional collection blends design and function to suit your individual taste.
+        Make each room unique, or pick a cohesive theme that best express your interests and what
+        inspires you. Find the furniture pieces you need, from traditional to contemporary styles
+        or anything in between. Product specialists are available to help you create your dream space.
+      </p>
+    </div>
+    <div></div>
+  </section>
 
-  Discover innovative ways to decorate
 
-  We provide unmatched quality, comfort, and style for property owners across the country. 
-  Our experts combine form and function in bringing your vision to life. Create a room in your 
-  own style with our collection and make your property a reflection of you and what you love.
-
-  Shop now
-
-  We are available all across the globe
-
-  With stores all over the world, it's easy for you to find furniture for your home or place of business. 
-  Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
-  store locator. Any questions? Don't hesitate to contact us today.
-
-  Shop now
-
-  Manufactured with the best materials
-
-  Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
-  to ensure that every product is made as perfect and as consistent as possible. With three decades of 
-  experience in this industry, we understand what customers want for their home and office.
-
-  Shop now
-
-  About our furniture
-
-  Our multifunctional collection blends design and function to suit your individual taste.
-  Make each room unique, or pick a cohesive theme that best express your interests and what
-  inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-  or anything in between. Product specialists are available to help you create your dream space.
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Adewale Stephen</a>.
   </div>
   <script src="main.js"></script>
 </body>
+
 </html>
