--- a/index.html
+++ b/index.html
@@ -11,26 +11,38 @@
 
 <body>
   <main class="d-flex">
-    <section class="navigationSection">
+    <section data-changeBg="changeBg" class="navigationSection"
+      style="--bgImgDesk: url('./assets/images/desktop-image-hero-1.jpg'); --bgImgMobile: url('./assets/images/mobile-image-hero-1.jpg')">
       <nav class="d-flex">
-        <img src="./assets/images/icon-hamburger.svg" alt="icon hamburger" class="menu">
+        <img data-showSideBar="showSideBar" src="./assets/images/icon-hamburger.svg" alt="icon hamburger" class="menu">
         <img src="./assets/images/logo.svg" alt="logo">
-        <ul class="d-flex">
+        <ul class="d-flex desktopNav">
           <li>Home</li>
           <li>Shop</li>
           <li>About</li>
           <li>Contact</li>
         </ul>
+        <div data-sideBar="sideBar" class="d-flex sideBar d-none">
+          <img data-hideSideBar="hideSideBar" src="./assets/images/icon-close.svg" alt="cancel">
+          <ul class="d-flex">
+            <li>Home</li>
+            <li>Shop</li>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
+        </div>
       </nav>
-      <div class="d-flex">
-        <img class="change" src="./assets/images/icon-angle-left.svg" alt="angle left">
-        <img class="change" src="./assets/images/icon-angle-right.svg" alt="angle right">
+      <div class="d-flex controls">
+        <img data-bwdChangeImage="bwdChangeImage" class="change" src="./assets/images/icon-angle-left.svg"
+          alt="angle left">
+        <img data-fwdChangeImage="fwdChangeImage" class="change" src="./assets/images/icon-angle-right.svg"
+          alt="angle right">
       </div>
     </section>
     <header class="d-flex">
-      <section>
-        <h1>Discover innovative ways to decorate</h1>
-        <p>
+      <section class="sections">
+        <h1 data-h1Element="h1Element">Discover innovative ways to decorate</h1>
+        <p data-pElement="pElement">
           We provide unmatched quality, comfort, and style for property owners across the country.
           Our experts combine form and function in bringing your vision to life. Create a room in your
           own style with our collection and make your property a reflection of you and what you love.
@@ -39,28 +51,7 @@
           <h5>Shop now</h5> <img src="./assets/images/icon-arrow.svg" alt="icon arrow">
         </div>
       </section>
-      <section class="d-none">
-        <h1>We are available all across the globe</h1>
-        <p>
-          With stores all over the world, it's easy for you to find furniture for your home or place of business.
-          Locally, we’re in most major cities throughout the country. Find the branch nearest you using our
-          store locator. Any questions? Don't hesitate to contact us today.
-        </p>
-        <div class="d-flex">
-          <h5>Shop now</h5> <img src="./assets/images/icon-arrow.svg" alt="icon arrow">
-        </div>
-      </section>
-      <section class="d-none">
-        <h1>Manufactured with the best materials</h1>
-        <p>
-          Our modern furniture store provide a high level of quality. Our company has invested in advanced technology
-          to ensure that every product is made as perfect and as consistent as possible. With three decades of
-          experience in this industry, we understand what customers want for their home and office.
-        </p>
-        <div class="d-flex">
-          <h5>Shop now</h5> <img src="./assets/images/icon-arrow.svg" alt="icon arrow">
-        </div>
-      </section>
+
     </header>
   </main>
   <section class="furnitures d-flex">
