--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
           Our experts combine form and function in bringing your vision to life. Create a room in your
           own style with our collection and make your property a reflection of you and what you love.
         </p>
-        <div class="d-flex">
-          <h5>Shop now</h5> <img src="./assets/images/icon-arrow.svg" alt="icon arrow">
-        </div>
+        <a href="https://x.com/codewithstephen">
+          <div class="d-flex">
+            <h5>Shop now</h5> <img src="./assets/images/icon-arrow.svg" alt="icon arrow">
+          </div>
+        </a>
       </section>
 
     </header>
