--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Room Homepage Master">
+  <meta name="keywords" content="Room, Homepage, Master">
+  <meta name="author" content="Adewale Stephen">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Room homepage</title>
   <link rel="stylesheet" href="style.css">
